# ClassiCubeVxp

./: .gitignore  CMakeLists.txt
cmake/: toolchain-arm-none-eabi.cmake
main/: CMakeLists.txt  main.c  main.cpp
src/: Bitmap.h  CMakeLists.txt  ClassiCube.vcxproj  ClassiCube.vcxproj.filters  Core.h  Graphics_Small3dlib.c  Platform_MRE.c  Window_MRE.c
