cmake_minimum_required (VERSION 3.8)

set(PROJECT_NAME "scr")

add_library(${PROJECT_NAME} STATIC 
    Animations.c
    Animations.h
    Audio.c
    Audio.h
    AudioBackend.c
    AxisLinesRenderer.c
    AxisLinesRenderer.h
    Bitmap.c
    Bitmap.h
    Block.c
    Block.h
    BlockID.h
    BlockPhysics.c
    BlockPhysics.h
    Builder.c
    Builder.h
    Camera.c
    Camera.h
    Chat.c
    Chat.h
    Commands.c
    Commands.h
    Constants.h
    Core.h
    Deflate.c
    Deflate.h
    Drawer.c
    Drawer.h
    Drawer2D.c
    Drawer2D.h
    Entity.c
    Entity.h
    EntityComponents.c
    EntityComponents.h
    EntityRenderers.c
    EntityRenderers.h
    EnvRenderer.c
    EnvRenderer.h
    Errors.h
    Event.c
    Event.h
    ExtMath.c
    ExtMath.h
    FancyLighting.c
    Formats.c
    Formats.h
    Funcs.h
    Game.c
    Game.h
    GameVersion.c
    Generator.c
    Generator.h
    Graphics.h
    Graphics_3DS.c
    Graphics_D3D11.c
    Graphics_D3D9.c
    Graphics_Dreamcast.c
    Graphics_GCWii.c
    Graphics_GL1.c
    Graphics_GL2.c
    Graphics_N64.c
    Graphics_NDS.c
    Graphics_PS1.c
    Graphics_PS2.c
    Graphics_PS3.c
    Graphics_PSP.c
    Graphics_PSVita.c
    Graphics_Saturn.c
    Graphics_SoftGPU.c
    Graphics_WiiU.c
    Graphics_Xbox.c
    Graphics_Xbox360.c
    Gui.c
    Gui.h
    HeldBlockRenderer.c
    HeldBlockRenderer.h
    Http.h
    Http_Web.c
    Http_Worker.c
    Input.c
    Input.h
    InputHandler.c
    InputHandler.h
    Inventory.c
    Inventory.h
    IsometricDrawer.c
    IsometricDrawer.h
    LBackend.c
    LBackend.h
    LBackend_Android.c
    LScreens.c
    LScreens.h
    LWeb.c
    LWeb.h
    LWidgets.c
    LWidgets.h
    Launcher.c
    Launcher.h
    Lighting.c
    Lighting.h
    Logger.c
    Logger.h
    MapRenderer.c
    MapRenderer.h
    MenuOptions.c
    Menus.c
    Menus.h
    Model.c
    Model.h
    Options.c
    Options.h
    PackedCol.c
    PackedCol.h
    Particle.c
    Particle.h
    Physics.c
    Physics.h
    Picking.c
    Picking.h
    Platform.h
    Platform_32x.c
    Platform_3DS.c
    Platform_Amiga.c
    Platform_Android.c
    Platform_BeOS.cpp
    Platform_Dreamcast.c
    Platform_GCWii.c
    Platform_MSDOS.c
    Platform_MacClassic.c
    Platform_MRE.c
    Platform_N64.c
    Platform_NDS.c
    Platform_PS1.c
    Platform_PS2.c
    Platform_PS3.c
    Platform_PSP.c
    Platform_PSVita.c
    Platform_Posix.c
    Platform_Saturn.c
    Platform_Switch.c
    Platform_Web.c
    Platform_WiiU.c
    Platform_Windows.c
    Platform_Xbox.c
    Platform_Xbox360.c
    Protocol.c
    Protocol.h
    Queue.c
    Queue.h
    Resources.c
    Resources.h
    SSL.c
    SSL.h
    Screens.c
    Screens.h
    SelOutlineRenderer.c
    SelOutlineRenderer.h
    SelectionBox.c
    SelectionBox.h
    Server.c
    Server.h
    Stream.c
    Stream.h
    String.c
    String.h
    SystemFonts.c
    SystemFonts.h
    TexturePack.c
    TexturePack.h
    TouchUI.c
    Utils.c
    Utils.h
    Vectors.c
    Vectors.h
    VirtualCursor.h
    VirtualKeyboard.h
    Vorbis.c
    Vorbis.h
    Widgets.c
    Widgets.h
    Window.h
    Window_32x.c
    Window_3DS.c
    Window_Amiga.c
    Window_Android.c
    Window_BeOS.cpp
    Window_Dreamcast.c
    Window_GCWii.c
    Window_MSDOS.c
    Window_MacClassic.c
    Window_MRE.c
    Window_N64.c
    Window_NDS.c
    Window_OS2.c
    Window_PS1.c
    Window_PS2.c
    Window_PS3.c
    Window_PSP.c
    Window_PSVita.c
    Window_SDL2.c
    Window_SDL3.c
    Window_Saturn.c
    Window_Switch.c
    Window_Terminal.c
    Window_Web.c
    Window_WiiU.c
    Window_Win.c
    Window_X11.c
    Window_Xbox.c
    Window_Xbox360.c
    World.c
    World.h
    _GLShared.h
    _GraphicsBase.h
    _HttpBase.h
    _PlatformBase.h
    _PlatformConsole.h
    _WindowBase.h
    _autofit.c
    _cff.c
    _ftbase.c
    _ftbitmap.c
    _ftglyph.c
    _ftinit.c
    _ftsynth.c
    _psaux.c
    _pshinter.c
    _psmodule.c
    _sfnt.c
    _smooth.c
    _truetype.c
    _type1.c
    main.c
    main.h
)

target_link_libraries(${PROJECT_NAME} mreapi libco)